--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "2.3.3",
     "nodemon": "2.0.16",
     "sequelize": "6.20.1",
-    "sequelize-cli": "6.4.1"
+    "sequelize-cli": "6.4.1",
+    "uuid": "^8.3.2"
   }
 }
